test/bad/res1.pacc
/*
nopacc 7:23 'expected NameStart:c:0'
*/

/* Results may once again appear only at the end of a sequence. */

S ← "foo" → qux "bar"
